--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ img {
     display: flex;
     width: 100%;
     overflow-x: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
 }
 .carrousel_ecran {
     width: 100%;
@@ -18,4 +20,5 @@ img {
 
 .carrousel_ecran figure {
     margin: 0;
+    scroll-snap-align: start; 
 }
