--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ img {
 
 .carrousel {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
   
 .carrousel_btn {
@@ -49,4 +53,12 @@ img {
 
 .carrousel_btn-apres {
     right: 0;
+}
+.caroussel_liste-liens {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    gap: 1rem;
 }
